dummy images for bg

--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,35 @@
             </ul>
         </nav>
 
-    </header>
+    </header><!--end header-->
+    <!--create parallax modules for loaded content-->
+    <!--sections with a class of 'parallax' will contain our background images and heading text-->
+    <!--while each section with a class of 'content' will be simple content-containing sections. -->
+    <!-- the 'container' class is a fluid div with a maximum width, making the responsiveness of it all very simple.-->
+    <section class="module parallax parallax-1">
+        <div class="container">
+            <h1>Hero Section</h1>
+        </div>
+    </section>
+    <section class="module parallax parallax-2">
+        <div class="container">
+            <h1>Portfolio Section</h1>
+        </div>
+    </section>
+    <section class="module parallax parallax-3">
+        <div class="container">
+            <h1>Services Section</h1>
+        </div>
+    </section>
+    <section class="module content">
+        <div class="container">
+            <h2>Lorem Ipsum Dolor</h2>
+            <p>Lorem ipsum dolor...</p>
+        </div>
+    </section>
 
-    <section id="hero"></section>
 
-    <section id="main-content">
-    </section><!--end main-content-->
+
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="js/main.js"></script>
     <script src="js/plugins.js"></script>
